# ninjabot

./: .dockerignore  Dockerfile  config.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml
ninja_bot/: __init__.py  __main__.py  bot.py  settings.py
ninja_bot/ninja_hunt/: __init__.py  cog.py  game.py
ninja_bot/utils/: checks.py  numbers.py
resources/: ninja_names.txt
