[tool.poetry]
name = "duckybot"
version = "0.1.0"
description = "A Ducky Bot to rule the Duckpond"
authors = ["Sebastiaan Zeeff <sebastiaan@pythondiscord.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.8"
"discord.py" = "^1.6.0"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
PyYAML = "^5.4.1"
async-rediscache = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
